--- a/Grains/Base.lproj/Main.storyboard
+++ b/Grains/Base.lproj/Main.storyboard
@@ -569,10 +569,6 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="semolina" translatesAutoresizingMaskIntoConstraints="NO" id="eVT-pz-FRg" userLabel="backgroundImage">
                                 <rect key="frame" x="0.0" y="-28" width="414" height="924"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="38" placeholderIntrinsicHeight="36" image="shareApp 5" translatesAutoresizingMaskIntoConstraints="NO" id="DvM-Fz-Jmm">
-                                <rect key="frame" x="28.666666666666671" y="272" width="38" height="40"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                             <segmentedControl opaque="NO" alpha="0.69999999999999996" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="w0X-1n-Oy5">
                                 <rect key="frame" x="0.0" y="702.5" width="414" height="32"/>
                                 <constraints>
@@ -608,7 +604,7 @@
                                     <constraint firstItem="uZf-xe-FBM" firstAttribute="centerY" secondItem="1cc-Zg-Cde" secondAttribute="centerY" id="5xW-3Y-owH"/>
                                 </constraints>
                             </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="TTP-mc-WU5">
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="TTP-mc-WU5" userLabel="WriteToDev">
                                 <rect key="frame" x="59.5" y="565.5" width="267" height="36"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" image="sendMail 6" translatesAutoresizingMaskIntoConstraints="NO" id="sQN-x3-ZBG">
@@ -618,7 +614,7 @@
                                             <constraint firstAttribute="height" constant="36" id="g8f-eq-Jui"/>
                                         </constraints>
                                     </imageView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UKN-zh-TEb">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UKN-zh-TEb">
                                         <rect key="frame" x="43" y="0.0" width="224" height="36"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                         <state key="normal" title="Написать разработчику  ">
@@ -630,7 +626,7 @@
                                     </button>
                                 </subviews>
                             </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="0g3-SO-gBy">
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="0g3-SO-gBy" userLabel="RateAPP">
                                 <rect key="frame" x="61.5" y="508.5" width="263" height="37"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" image="rateApp 4" translatesAutoresizingMaskIntoConstraints="NO" id="tx4-Sa-H1D">
@@ -655,36 +651,56 @@
                                     </button>
                                 </subviews>
                             </stackView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" image="purchaseApp 2" translatesAutoresizingMaskIntoConstraints="NO" id="bP7-Db-cwB">
-                                <rect key="frame" x="28.666666666666671" y="412" width="38" height="36"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zox-nM-pyB">
-                                <rect key="frame" x="79.666666666666671" y="273.66666666666669" width="190" height="37"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <inset key="imageEdgeInsets" minX="80" minY="80" maxX="80" maxY="80"/>
-                                <state key="normal" title="Поделиться с друзьями">
-                                    <color key="titleColor" name="CustomFontColourForOtherVc"/>
-                                </state>
-                                <connections>
-                                    <action selector="shareButtonAction:" destination="LQx-Pu-WCy" eventType="touchUpInside" id="H2R-Jo-MBs"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xIU-dX-QXC" userLabel="купить полную версию">
-                                <rect key="frame" x="79.666666666666671" y="341.66666666666669" width="186" height="37"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <state key="normal" title="Купить полную версию">
-                                    <color key="titleColor" name="CustomFontColourForOtherVc"/>
-                                </state>
-                                <connections>
-                                    <action selector="purchaseFullVersion:" destination="LQx-Pu-WCy" eventType="touchUpInside" id="yLx-oY-wiP"/>
-                                </connections>
-                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="Kdo-Km-llG" userLabel="PurschaseApp">
+                                <rect key="frame" x="61.5" y="452.5" width="263" height="36"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" image="purchaseApp 2" translatesAutoresizingMaskIntoConstraints="NO" id="bP7-Db-cwB">
+                                        <rect key="frame" x="0.0" y="0.0" width="38" height="36"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="36" id="020-BK-hzf"/>
+                                            <constraint firstAttribute="width" constant="38" id="yHD-Zp-T8h"/>
+                                        </constraints>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xIU-dX-QXC" userLabel="купить полную версию">
+                                        <rect key="frame" x="44" y="0.0" width="219" height="36"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <state key="normal" title="Купить полную версию">
+                                            <color key="titleColor" name="CustomFontColourForOtherVc"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="purchaseFullVersion:" destination="LQx-Pu-WCy" eventType="touchUpInside" id="yLx-oY-wiP"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="cdC-Fv-zwb" userLabel="ShareApp">
+                                <rect key="frame" x="61.5" y="396.5" width="263" height="36"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="38" placeholderIntrinsicHeight="36" image="shareApp 5" translatesAutoresizingMaskIntoConstraints="NO" id="DvM-Fz-Jmm">
+                                        <rect key="frame" x="0.0" y="0.0" width="38" height="36"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="38" id="I9i-3C-Sgh"/>
+                                            <constraint firstAttribute="height" constant="36" id="URX-2z-Kgr"/>
+                                        </constraints>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zox-nM-pyB">
+                                        <rect key="frame" x="44" y="0.0" width="219" height="36"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <inset key="imageEdgeInsets" minX="80" minY="80" maxX="80" maxY="80"/>
+                                        <state key="normal" title="Поделиться с друзьями">
+                                            <color key="titleColor" name="CustomFontColourForOtherVc"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="shareButtonAction:" destination="LQx-Pu-WCy" eventType="touchUpInside" id="H2R-Jo-MBs"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="Kdo-Km-llG" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="pWy-Vw-z4m" secondAttribute="leading" constant="10" id="54p-M1-ewL"/>
+                            <constraint firstItem="Kdo-Km-llG" firstAttribute="top" secondItem="cdC-Fv-zwb" secondAttribute="bottom" constant="20" id="5p4-mE-3nF"/>
                             <constraint firstItem="0g3-SO-gBy" firstAttribute="centerX" secondItem="qeE-4N-sEt" secondAttribute="centerX" constant="-14" id="6uw-G7-rah"/>
                             <constraint firstItem="eVT-pz-FRg" firstAttribute="width" secondItem="qeE-4N-sEt" secondAttribute="width" id="BYm-Rn-cWf"/>
                             <constraint firstItem="pWy-Vw-z4m" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="TTP-mc-WU5" secondAttribute="trailing" constant="10" id="Bpq-ek-1Td"/>
@@ -692,13 +708,21 @@
                             <constraint firstItem="w0X-1n-Oy5" firstAttribute="top" secondItem="6iN-5A-EEM" secondAttribute="bottom" constant="20" id="I8F-go-wIl"/>
                             <constraint firstItem="w0X-1n-Oy5" firstAttribute="leading" secondItem="pWy-Vw-z4m" secondAttribute="leading" id="IYA-6h-5LP"/>
                             <constraint firstItem="eVT-pz-FRg" firstAttribute="centerY" secondItem="pWy-Vw-z4m" secondAttribute="centerY" constant="5.5" id="JHI-ih-9QU"/>
+                            <constraint firstItem="pWy-Vw-z4m" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Kdo-Km-llG" secondAttribute="trailing" constant="10" id="Mts-NX-YFz"/>
                             <constraint firstItem="sQN-x3-ZBG" firstAttribute="centerX" secondItem="tx4-Sa-H1D" secondAttribute="centerX" constant="-2" id="PIq-Bp-xvT"/>
                             <constraint firstItem="w0X-1n-Oy5" firstAttribute="centerX" secondItem="qeE-4N-sEt" secondAttribute="centerX" id="R7O-ag-G8J"/>
                             <constraint firstItem="pWy-Vw-z4m" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="0g3-SO-gBy" secondAttribute="trailing" constant="10" id="RjU-ky-nqv"/>
+                            <constraint firstItem="cdC-Fv-zwb" firstAttribute="centerX" secondItem="qeE-4N-sEt" secondAttribute="centerX" constant="-14" id="Uwf-K5-WAS"/>
+                            <constraint firstItem="cdC-Fv-zwb" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="pWy-Vw-z4m" secondAttribute="leading" constant="10" id="Vt1-kg-JPX"/>
+                            <constraint firstItem="tx4-Sa-H1D" firstAttribute="centerX" secondItem="bP7-Db-cwB" secondAttribute="centerX" id="aZz-Jn-XHK"/>
                             <constraint firstItem="TTP-mc-WU5" firstAttribute="top" secondItem="0g3-SO-gBy" secondAttribute="bottom" constant="20" id="bIE-aF-cNL"/>
                             <constraint firstItem="0g3-SO-gBy" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="pWy-Vw-z4m" secondAttribute="leading" constant="10" id="c9V-U3-ioQ"/>
+                            <constraint firstItem="pWy-Vw-z4m" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="cdC-Fv-zwb" secondAttribute="trailing" constant="10" id="fGJ-VG-ILL"/>
                             <constraint firstItem="6iN-5A-EEM" firstAttribute="centerX" secondItem="qeE-4N-sEt" secondAttribute="centerX" constant="-18" id="hwT-8B-4z7"/>
                             <constraint firstItem="eVT-pz-FRg" firstAttribute="centerX" secondItem="pWy-Vw-z4m" secondAttribute="centerX" priority="750" id="kNr-0J-cbX"/>
+                            <constraint firstItem="0g3-SO-gBy" firstAttribute="top" secondItem="Kdo-Km-llG" secondAttribute="bottom" constant="20" id="mmc-tv-fCT"/>
+                            <constraint firstItem="bP7-Db-cwB" firstAttribute="centerX" secondItem="DvM-Fz-Jmm" secondAttribute="centerX" id="pMs-wU-eKt"/>
+                            <constraint firstItem="Kdo-Km-llG" firstAttribute="centerX" secondItem="qeE-4N-sEt" secondAttribute="centerX" constant="-14" id="pXA-cr-8z9"/>
                             <constraint firstItem="pWy-Vw-z4m" firstAttribute="bottom" secondItem="w0X-1n-Oy5" secondAttribute="bottom" constant="79.329999999999998" id="q4y-oF-az9"/>
                             <constraint firstItem="TTP-mc-WU5" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="pWy-Vw-z4m" secondAttribute="leading" constant="10" id="rE5-pF-0D6"/>
                             <constraint firstItem="pWy-Vw-z4m" firstAttribute="trailing" secondItem="w0X-1n-Oy5" secondAttribute="trailing" id="rmu-DT-7mv"/>
@@ -707,14 +731,6 @@
                             <constraint firstItem="eVT-pz-FRg" firstAttribute="height" secondItem="qeE-4N-sEt" secondAttribute="height" constant="28" id="wUz-ze-853"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="pWy-Vw-z4m"/>
-                        <variation key="default">
-                            <mask key="subviews">
-                                <exclude reference="DvM-Fz-Jmm"/>
-                                <exclude reference="bP7-Db-cwB"/>
-                                <exclude reference="Zox-nM-pyB"/>
-                                <exclude reference="xIU-dX-QXC"/>
-                            </mask>
-                        </variation>
                     </view>
                     <tabBarItem key="tabBarItem" systemItem="more" id="Rqd-MG-eWY"/>
                     <connections>
