--- a/Grains/Base.lproj/Main.storyboard
+++ b/Grains/Base.lproj/Main.storyboard
@@ -570,7 +570,7 @@
                                 <rect key="frame" x="0.0" y="-28" width="414" height="924"/>
                             </imageView>
                             <segmentedControl opaque="NO" alpha="0.69999999999999996" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="w0X-1n-Oy5">
-                                <rect key="frame" x="0.0" y="702.5" width="414" height="32"/>
+                                <rect key="frame" x="0.0" y="623.5" width="414" height="32"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="31" id="OfM-XU-mJ7"/>
                                 </constraints>
@@ -584,7 +584,7 @@
                                 </connections>
                             </segmentedControl>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="6iN-5A-EEM" userLabel="MeasureStack View">
-                                <rect key="frame" x="71" y="646.5" width="236" height="36"/>
+                                <rect key="frame" x="62" y="567.5" width="254" height="36"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" image="measures 3" translatesAutoresizingMaskIntoConstraints="NO" id="1cc-Zg-Cde">
                                         <rect key="frame" x="0.0" y="0.0" width="36" height="36"/>
@@ -594,8 +594,8 @@
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Единицы измерения" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uZf-xe-FBM">
-                                        <rect key="frame" x="49" y="0.0" width="187" height="36"/>
-                                        <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="20"/>
+                                        <rect key="frame" x="49" y="0.0" width="205" height="36"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                         <color key="textColor" name="CustomFontColourForOtherVc"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -605,7 +605,7 @@
                                 </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="TTP-mc-WU5" userLabel="WriteToDev">
-                                <rect key="frame" x="59.5" y="565.5" width="267" height="36"/>
+                                <rect key="frame" x="46.5" y="486.5" width="293" height="36"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" image="sendMail 6" translatesAutoresizingMaskIntoConstraints="NO" id="sQN-x3-ZBG">
                                         <rect key="frame" x="0.0" y="0.0" width="38" height="36"/>
@@ -615,8 +615,8 @@
                                         </constraints>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UKN-zh-TEb">
-                                        <rect key="frame" x="43" y="0.0" width="224" height="36"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                        <rect key="frame" x="43" y="0.0" width="250" height="36"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                         <state key="normal" title="Написать разработчику  ">
                                             <color key="titleColor" name="CustomFontColourForOtherVc"/>
                                         </state>
@@ -625,9 +625,12 @@
                                         </connections>
                                     </button>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="UKN-zh-TEb" firstAttribute="centerY" secondItem="TTP-mc-WU5" secondAttribute="centerY" id="8gW-Fg-ld8"/>
+                                </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="0g3-SO-gBy" userLabel="RateAPP">
-                                <rect key="frame" x="61.5" y="508.5" width="263" height="37"/>
+                                <rect key="frame" x="48.5" y="429.5" width="289" height="37"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" image="rateApp 4" translatesAutoresizingMaskIntoConstraints="NO" id="tx4-Sa-H1D">
                                         <rect key="frame" x="0.0" y="0.0" width="38" height="37"/>
@@ -637,11 +640,11 @@
                                         </constraints>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y3H-rQ-GNg">
-                                        <rect key="frame" x="44" y="0.0" width="219" height="37"/>
+                                        <rect key="frame" x="44" y="0.0" width="245" height="37"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="37" id="lcS-x4-KwS"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                         <state key="normal" title="Оценить приложение">
                                             <color key="titleColor" name="CustomFontColourForOtherVc"/>
                                         </state>
@@ -652,7 +655,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="Kdo-Km-llG" userLabel="PurschaseApp">
-                                <rect key="frame" x="61.5" y="452.5" width="263" height="36"/>
+                                <rect key="frame" x="48.5" y="373.5" width="289" height="36"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" image="purchaseApp 2" translatesAutoresizingMaskIntoConstraints="NO" id="bP7-Db-cwB">
                                         <rect key="frame" x="0.0" y="0.0" width="38" height="36"/>
@@ -662,8 +665,8 @@
                                         </constraints>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xIU-dX-QXC" userLabel="купить полную версию">
-                                        <rect key="frame" x="44" y="0.0" width="219" height="36"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <rect key="frame" x="44" y="0.0" width="245" height="36"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                         <state key="normal" title="Купить полную версию">
                                             <color key="titleColor" name="CustomFontColourForOtherVc"/>
                                         </state>
@@ -674,7 +677,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="cdC-Fv-zwb" userLabel="ShareApp">
-                                <rect key="frame" x="61.5" y="396.5" width="263" height="36"/>
+                                <rect key="frame" x="48.5" y="317.5" width="289" height="36"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="38" placeholderIntrinsicHeight="36" image="shareApp 5" translatesAutoresizingMaskIntoConstraints="NO" id="DvM-Fz-Jmm">
                                         <rect key="frame" x="0.0" y="0.0" width="38" height="36"/>
@@ -683,12 +686,13 @@
                                             <constraint firstAttribute="height" constant="36" id="URX-2z-Kgr"/>
                                         </constraints>
                                     </imageView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zox-nM-pyB">
-                                        <rect key="frame" x="44" y="0.0" width="219" height="36"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zox-nM-pyB">
+                                        <rect key="frame" x="44" y="0.0" width="245" height="36"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                         <inset key="imageEdgeInsets" minX="80" minY="80" maxX="80" maxY="80"/>
                                         <state key="normal" title="Поделиться с друзьями">
                                             <color key="titleColor" name="CustomFontColourForOtherVc"/>
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="small"/>
                                         </state>
                                         <connections>
                                             <action selector="shareButtonAction:" destination="LQx-Pu-WCy" eventType="touchUpInside" id="H2R-Jo-MBs"/>
@@ -723,10 +727,11 @@
                             <constraint firstItem="0g3-SO-gBy" firstAttribute="top" secondItem="Kdo-Km-llG" secondAttribute="bottom" constant="20" id="mmc-tv-fCT"/>
                             <constraint firstItem="bP7-Db-cwB" firstAttribute="centerX" secondItem="DvM-Fz-Jmm" secondAttribute="centerX" id="pMs-wU-eKt"/>
                             <constraint firstItem="Kdo-Km-llG" firstAttribute="centerX" secondItem="qeE-4N-sEt" secondAttribute="centerX" constant="-14" id="pXA-cr-8z9"/>
-                            <constraint firstItem="pWy-Vw-z4m" firstAttribute="bottom" secondItem="w0X-1n-Oy5" secondAttribute="bottom" constant="79.329999999999998" id="q4y-oF-az9"/>
+                            <constraint firstItem="pWy-Vw-z4m" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="w0X-1n-Oy5" secondAttribute="bottom" priority="750" constant="20" id="q4y-oF-az9"/>
                             <constraint firstItem="TTP-mc-WU5" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="pWy-Vw-z4m" secondAttribute="leading" constant="10" id="rE5-pF-0D6"/>
                             <constraint firstItem="pWy-Vw-z4m" firstAttribute="trailing" secondItem="w0X-1n-Oy5" secondAttribute="trailing" id="rmu-DT-7mv"/>
                             <constraint firstItem="6iN-5A-EEM" firstAttribute="top" secondItem="TTP-mc-WU5" secondAttribute="bottom" priority="750" constant="45" id="sfa-oY-cfu"/>
+                            <constraint firstItem="0g3-SO-gBy" firstAttribute="centerY" secondItem="qeE-4N-sEt" secondAttribute="centerY" id="v6x-q5-oMz"/>
                             <constraint firstItem="TTP-mc-WU5" firstAttribute="centerX" secondItem="qeE-4N-sEt" secondAttribute="centerX" constant="-14" id="vJn-Gp-l58"/>
                             <constraint firstItem="eVT-pz-FRg" firstAttribute="height" secondItem="qeE-4N-sEt" secondAttribute="height" constant="28" id="wUz-ze-853"/>
                         </constraints>
